# geo

./: .gitignore  .gitmodules  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  _config.yml  bors.toml  index.md  usage.md
geo/: CHANGES.md  CHANGES.md.orig  Cargo.toml  Rect-contains-multipoint.md  convex-contains-convex.md  convex-contains-line.md  convex-contains-linestring.md  triangle-contains-triangle.md
geo-benches/: Cargo.toml
geo-benches/fixtures/rust-geo-booleanop-fixtures/: fatal1.geojson  fatal2.geojson  overlap_y.geojson  touching_boxes.geojson  two_shapes.geojson  two_triangles.geojson
geo-benches/src/: area.rs  ball_tree.rs  boolean_ops.rs  concave_hull.rs  contains.rs  contains_properly.rs  convex_hull.rs  covers.rs  dbscan.rs  euclidean_distance.rs  hdbscan.rs  intersection.rs  minimum_rotated_rect.rs  monotone_subdiv.rs  prepared_geometry.rs  rand_line_crossings.rs  relate.rs  simplify.rs  stitch.rs  sweep_line_intersection.rs  tests.rs  triangle_construction.rs  triangulate.rs  validation.rs  voronoi.rs
geo-benches/src/utils/: compare_impl.rs  crossings.rs  mod.rs  random.rs
geo-bool-ops-benches/: .gitignore  Cargo.toml
geo-bool-ops-benches/benches/: boolean_ops.rs
geo-bool-ops-benches/benches/utils/: bops.rs
geo-bool-ops-benches/fixtures/rust-geo-booleanop-fixtures/: hourglasses.geojson  overlap_loop.geojson  polygon_trapezoid_edge_overlap.geojson  rectangles.geojson
geo-bool-ops-benches/src/: tests.rs
geo-generic-alg/: Cargo.toml  README.md
geo-generic-alg/benches/: area.rs  centroid.rs  distance.rs  euclidean_length.rs  intersection.rs  length.rs  perimeter.rs
geo-generic-alg/benches/utils/: wkb.rs
geo-generic-alg/src/: geometry.rs  geometry_cow.rs  lib.rs  types.rs  utils.rs
geo-generic-alg/src/algorithm/: affine_ops.rs  area.rs  bounding_rect.rs  centroid.rs  coordinate_position.rs  coords_iter.rs  cross_track_distance.rs  dimensions.rs  euclidean_distance.rs  euclidean_length.rs  extremes.rs  geodesic_distance.rs  hausdorff_distance.rs  haversine_bearing.rs  haversine_closest_point.rs  haversine_destination.rs  haversine_intermediate.rs  haversine_length.rs  map_coords.rs  minimum_rotated_rect.rs  mod.rs  orient.rs  perimeter.rs  proj.rs  rotate.rs  scale.rs  simplify.rs  skew.rs  translate.rs  triangulate_earcut.rs  triangulate_spade.rs  winding_order.rs
geo-generic-tests/: Cargo.toml  README.md
geo-generic-tests/src/: lib.rs
geo-generic-tests/src/simple/: alg_test.rs  coord.rs  geometry.rs  line_string.rs  mod.rs  point.rs  polygon.rs
geo-generic-tests/src/wkb/: common.rs  error.rs  mod.rs
geo-postgis/: CHANGES.md  Cargo.toml
geo-postgis/src/: from_postgis.rs  lib.rs  to_postgis.rs
geo-traits/: CHANGES.md  Cargo.toml
geo-traits-ext/: Cargo.toml  README.md
geo-traits-ext/src/: coord.rs  geometry.rs  geometry_collection.rs  lib.rs  line.rs  line_string.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  triangle.rs  type_tag.rs
geo-traits/src/: coord.rs  dimension.rs  geometry.rs  geometry_collection.rs  iterator.rs  lib.rs  line.rs  line_string.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  to_geo.rs  triangle.rs
geo-traits/src/structs/: coord.rs  geometry.rs  geometry_collection.rs  geometrycollection.rs  line_string.rs  linestring.rs  mod.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  multilinestring.rs  multipoint.rs  multipolygon.rs  point.rs  polygon.rs
geo-types/: CHANGES.md  Cargo.toml
geo-types/src/: algorithms.rs  arbitrary.rs  bounding_rect.rs  coordinate.rs  debug.rs  error.rs  exterior_iter.rs  geo_map.rs  geo_rstar.rs  geometry.rs  geometry_collection.rs  lib.rs  line.rs  line_string.rs  macros.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  novalue.rs  point.rs  polygon.rs  private_utils.rs  rect.rs  ring.rs  triangle.rs  vertex_string.rs  wkt_macro.rs
geo-types/src/geometry/: coord.rs  coordinate.rs  geometry_collection.rs  line.rs  line_string.rs  mod.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  no_value.rs  point.rs  polygon.rs  rect.rs  to_degrees.rs  to_radians.rs  triangle.rs
geo-types/src/traits/: coord.rs  geometry.rs  geometry_collection.rs  line_string.rs  mod.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs
geo/benches/: area.rs  boolean_ops.rs  centroid.rs  concave_hull.rs  contains.rs  contains_dim.rs  contains_properly.rs  convex_hull.rs  convexhull.rs  coordinate_position.rs  covers.rs  delaunay_diagram.rs  euclidean_distance.rs  extremes.rs  frechet_distance.rs  geodesic_distance.rs  intersection.rs  intersects.rs  kmeans.rs  line_locate_point.rs  monotone_subdiv.rs  prepared_geometry.rs  rand_line_crossings.rs  relate.rs  rotate.rs  simplify.rs  simplifyvw.rs  stitch.rs  sweep_line_intersection.rs  triangulate.rs  vincenty_distance.rs  winding_order.rs
geo/benches/utils/: bops.rs  crossings.rs  random.rs
geo/examples/: algorithm.rs  concavehull-usage.rs  types.rs
geo/examples/web-app/: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
geo/fuzz/: Cargo.toml
geo/fuzz/fuzz_targets/: bounding_rect.rs  (+7 more)
geo/src/: area.rs  bearing.rs  bounding_rect.rs  centroid.rs  closest_point.rs  concave_hull.rs  coordinate_position.rs  coords_iter.rs  dimensions.rs  earth_radius.rs  euclidean_distance.rs  euclidean_length.rs  extremes.rs  frechet_distance.rs  geodesic_distance.rs  geodesic_length.rs  geometry.rs  geometry_cow.rs  haversine_destination.rs  haversine_intermediate.rs  haversine_length.rs  is_convex.rs  lib.rs  line_interpolate_point.rs  line_locate_point.rs  macros.rs  main.rs  map_coords.rs  orient.rs  prepared_geometry.rs  ring.rs  rotate.rs  simplify.rs  simplifyvw.rs  traits.rs  translate.rs  types.rs  utils.rs  winding_order.rs
geo/tests/: bools_ops_tests.rs  buffer_tests.rs  jts_tests.rs
jts-test-runner/: .gitignore  Cargo.toml  README.md
jts-test-runner/resources/: README.md
jts-test-runner/src/: input.rs  lib.rs  runner.rs
(+693 files in other folders)
