[workspace]
resolver = "2"
members = [
  "geo",
  "geo-bool-ops-benches",
  "geo-postgis",
  "geo-test-fixtures",
  "geo-traits",
  "geo-types",
  "jts-test-runner",
]

[patch.crates-io]

# Ensure any transitive dependencies also use the local geo/geo-types
geo = { path = "geo" }
geo-types = { path = "geo-types" }
