[package]
name = "geo-bool-ops-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = { path = "../geo" }
geo-types = { path = "../geo-types" }
log = "0.4.11"

[dev-dependencies]
approx = ">= 0.4.0, < 0.6.0"
criterion = { version = "0.4", features = ["html_reports"] }
geo-test-fixtures = { path = "../geo-test-fixtures" }
jts-test-runner = { path = "../jts-test-runner" }
pretty_env_logger = "0.4"
rand = "0.8.0"
rand_distr = "0.4.3"

### boolean-ops test deps
anyhow = "1.0.57"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
glob = "0.3.0"
gt_prev = { version = "0.6.2", package = "geo-types" }
geo-booleanop = "0.3.2"
wkt = "0.10.1"
geojson = { version = "0.24.0", features = ["geo-types"] }

[[bench]]
name = "boolean_ops"
harness = false
