[package]
name = "geo-generic-alg"
description = "Geospatial primitives and algorithms for geo-traits"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]
autobenches = true
edition = "2021"
rust-version = "1.81"
categories = ["science::geo"]

[features]
default = ["earcutr", "spade", "multithreading"]
use-proj = ["proj"]
proj-network = ["use-proj", "proj/network"]
use-serde = ["serde", "geo-types/serde"]
multithreading = ["i_overlay/allow_multithreading", "geo-types/multithreading"]

[dependencies]
earcutr = { version = "0.4.2", optional = true }
spade = { version = "2.10.0", optional = true }
float_next_after = "1.0.0"
geo-traits = { version = "0.2.0" }
geo-types = { version = "0.7.16", features = ["approx", "use-rstar_0_12"] }
geo-traits-ext = { version = "0.1.0", features = ["approx", "use-rstar_0_12"] }
geographiclib-rs = { version = "0.2.3", default-features = false }
log = "0.4.11"
num-traits = "0.2"
proj = { version = "0.29.0", optional = true }
robust = "1.1.0"
rstar = "0.12.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
i_overlay = { version = "2.0.0, < 2.1.0", default-features = false }

[dev-dependencies]
approx = ">= 0.4.0, < 0.6.0"
criterion = { version = "0.4", features = ["html_reports"] }
geo-test-fixtures = { path = "../geo-test-fixtures" }
jts-test-runner = { path = "../jts-test-runner" }
pretty_env_logger = "0.4"
rand = "0.8.0"
rand_distr = "0.4.3"
wkt = "0.10.1"
geo-generic-tests = { path = "../geo-generic-tests" }

[[bench]]
name = "area"
harness = false
