[package]
name = "geo-postgis"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-postgis/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial", "postgis"]
description = "Conversion between `geo-types` and `postgis` types."
edition = "2018"

[dependencies]
postgis = "0.7"
geo-types = { version = "0.6", path = "../geo-types" }
