[package]
name = "geo-postgis"
version = "0.2.1"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-postgis/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial", "postgis"]
description = "Conversion between `geo-types` and `postgis` types."
edition = "2021"

[dependencies]
postgis = { version = ">=0.7.0, <0.9.0" }
geo-types = { version = "0.7", path = "../geo-types" }
