[package]
name = "geo-traits-ext"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-traits-ext/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]
description = "Extended traits for the `geo-traits` crate"
rust-version = "1.75"
edition = "2021"

[features]
default = ["std"]
std = ["geo-traits/geo-types", "geo-types/std", "approx/std", "serde?/std"]
multithreading = ["geo-types/multithreading"]
# Prefer `use-rstar` feature rather than enabling rstar directly.
rstar = ["use-rstar_0_8"]
use-rstar = ["use-rstar_0_8"]
use-rstar_0_8 = ["geo-types/use-rstar_0_8"]
use-rstar_0_9 = ["geo-types/use-rstar_0_9"]
use-rstar_0_10 = ["geo-types/use-rstar_0_10"]
use-rstar_0_11 = ["geo-types/use-rstar_0_11"]
use-rstar_0_12 = ["geo-types/use-rstar_0_12"]

[dependencies]
geo-traits = { version = "0.2.0", default-features = false }
geo-types = { version = "0.7.16", default-features = false }

num-traits = { version = "0.2", default-features = false, features = ["libm"] }
approx = { version = ">= 0.4.0, < 0.6.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
approx = ">= 0.4.0, < 0.6.0"
