[package]
name = "geo-types"
version = "0.7.16"
license = "mit or apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-types/"
readme = "../readme.md"
keywords = ["gis", "geo", "geography", "geospatial"]
description = "geospatial primitive data types"
rust-version = "1.75"
edition = "2021"

[features]
default = ["std"]
std = ["geo/std"]
multithreading = ["geo/multithreading"]
approx=["geo/approx"]
serde=["geo/serde"]
# prefer `use-rstar` feature rather than enabling rstar directly.
# rstar integration relies on the optional approx crate, but implicit features cannot yet enable other features.
# see: https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#namespaced-features
rstar = ["geo/rstar_0_8"]
use-rstar = ["geo/rstar_0_8"]
use-rstar_0_8 = ["geo/rstar_0_8"]
use-rstar_0_9 = ["geo/rstar_0_9"]
use-rstar_0_10 = ["geo/rstar_0_10"]
use-rstar_0_11 = ["geo/rstar_0_11"]
use-rstar_0_12 = ["geo/rstar"]

[dependencies]
geo = { path = "../geo" }

[dev-dependencies]
geo = { path = "../geo", features = ["algorithms", "approx", "serde"] }

