[package]
name = "geo-types"
version = "0.7.17"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo-types/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]
description = "Geospatial primitive data types"
rust-version = "1.75"
edition = "2021"

[features]
default = ["std"]
std = ["approx?/std", "num-traits/std", "serde?/std"]
multithreading = ["rayon"]
serde = [ "dep:serde", "rstar_0_8?/serde", "rstar_0_9?/serde", "rstar_0_10?/serde", "rstar_0_11?/serde", "rstar_0_12?/serde"]

rstar = ["rstar_0_8"]
rstar_0_8 = ["dep:rstar_0_8", "approx"]
rstar_0_9 = ["dep:rstar_0_9", "approx"]
rstar_0_10 = ["dep:rstar_0_10", "approx"]
rstar_0_11 = ["dep:rstar_0_11", "approx"]
rstar_0_12 = ["dep:rstar_0_12", "approx"]

# Deprecated feature flags with "use-" prefix from the days before `dep:`
use-rstar = ["rstar"]
use-rstar_0_8 = ["rstar_0_8"]
use-rstar_0_9 = ["rstar_0_9"]
use-rstar_0_10 = ["rstar_0_10"]
use-rstar_0_11 = ["rstar_0_11"]
use-rstar_0_12 = ["rstar_0_12"]
# Only used to make `cargo clippy --all-features` happy
__allow_deprecated_features = []

[dependencies]
rayon = { version = "1.10.0", optional = true }
approx = { version = ">= 0.4.0, < 0.6.0", optional = true, default-features = false }
arbitrary = { version = "1.2.0", optional = true }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rstar_0_8 = { package = "rstar", version = "0.8", optional = true }
rstar_0_9 = { package = "rstar", version = "0.9", optional = true }
rstar_0_10 = { package = "rstar", version = "0.10", optional = true }
rstar_0_11 = { package = "rstar", version = "0.11", optional = true }
rstar_0_12 = { package = "rstar", version = "0.12", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
approx = ">= 0.4.0, < 0.6.0"
