[package]
name = "geo"
description = "Geospatial primitives and algorithms"
version = "0.32.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]
autobenches = true
edition = "2024"
rust-version = "1.85"
categories = ["science::geo"]

[features]
default = ["earcutr", "spade", "multithreading"]
proj-network = ["proj", "proj/network"]
serde = ["dep:serde", "geo-types/serde"]
multithreading = ["i_overlay/allow_multithreading", "geo-types/multithreading"]

# Deprecated feature flags with "use-" prefix from the days before `dep:`
use-proj = ["proj"]
use-serde = ["serde"]
# Only used to make `cargo clippy --all-features` happy
__allow_deprecated_features = []

[dependencies]
earcutr = { version = "0.4.2", optional = true }
spade = { version = "2.10.0", optional = true }
float_next_after = "1.0.0"
geo-types = { version = "0.7.18", features = ["approx", "rstar_0_12"] }
geographiclib-rs = { version = "0.2.3", default-features = false }
log = "0.4.11"
num-traits = "0.2"
proj = { version = "0.31.0", optional = true }
robust = "1.1.0"
rstar = "0.12.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
i_overlay = { version = "4.0.0, < 4.1.0", default-features = false }
sif-itree = "0.4.0"
rand = "0.9.2"

# `rand` crate doesn't integrate with wasm-unknown-unknown directly
# Instead they recommend that users create an explicit dependency on getrandom, and enable wasm-js support
#
# `rand` maintainers recommend that each application does this to fix their build;
# However, if the version of getrandom ever rev's, all out users builds will break again.
#
# Instead, we require a specific version of getrandom, and use it to manually seed the RNG,
# rather than relying on the suggested "back door/unstable" configuration.
#
# The failure mode here, if `random` revs their version of `getrandom` is a duplicate dependency, rather than
# a broken build, until we update our getrandom dep.
#
# See https://github.com/georust/geo/pull/1478
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
approx = ">= 0.4.0, < 0.6.0"
geo-test-fixtures = { path = "../geo-test-fixtures" }
jts-test-runner = { path = "../jts-test-runner" }
pretty_env_logger = "0.4"
wkt = "0.14.0"
