[package]
name = "geo"
description = "Geospatial primitives and algorithms"
version = "0.33.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/geo"
documentation = "https://docs.rs/geo/"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]
autobenches = true
edition = "2024"
rust-version = "1.88"
categories = ["science::geo"]

[features]
default = ["earcut", "spade", "multithreading"]
# deprecated spelling earcutr->earcut
earcutr = ["earcut"]
proj-network = ["proj", "proj/network"]
serde = ["dep:serde", "geo-types/serde"]
multithreading = ["i_overlay/allow_multithreading", "geo-types/multithreading"]
spade = ["dep:spade", "geo-types/spade_2"]

# Deprecated feature flags with "use-" prefix from the days before `dep:`
use-proj = ["proj"]
use-serde = ["serde"]
# Only used to make `cargo clippy --all-features` happy
__allow_deprecated_features = []

[dependencies]
earcut = { version = "0.4.5", optional = true }
spade = { version = "2.10.0", optional = true }
float_next_after = "2.0.0"
geo-types = { version = "0.7.19", features = ["approx", "rstar_0_12"] }
geographiclib-rs = { version = "0.2.3", default-features = false }
log = "0.4.11"
num-traits = "0.2"
proj = { version = "0.31.0", optional = true }
robust = "1.1.0"
rstar = "0.12.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
i_overlay = { version = "4.5.1, < 4.6.0", default-features = false }
sif-itree = "0.4.0"
rand = { version = "0.10.0", default-features = false, features = [ "alloc" ] }
rand_pcg = "0.10.1"

[dev-dependencies]
approx = ">= 0.4.0, < 0.6.0"
geo-test-fixtures = { path = "../geo-test-fixtures" }
jts-test-runner = { path = "../jts-test-runner" }
pretty_env_logger = "0.4"
wkt = "0.14.0"
