[package]
name = "jts-test-runner"
version = "0.1.0"
authors = ["Michael Kirk <michael.code@endoftheworl.de>"]
edition = "2021"

[dependencies]
approx = "0.4.0"
geo = "*"
include_dir = { version = "0.6", features = ["search"] }
log = "0.4.14"
serde =  { version = "*", features = ["derive"] }
serde-xml-rs = "*"
wkt = { version = "0.10.0", features = ["geo-types", "serde"] }

[dev-dependencies]
pretty_env_logger = "*"
