[package]
categories = ["kmeans"]
description = "An example of accessing a source of randomness through the browser sandbox."
keywords = ["graphics", "geo"]
name = "kmeans_demo"
license = "MIT"
readme = "README.md"
repository = "https://github.com/georust/geo.git"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
geo = { version = "0.32.0", path = "../.." }
# rand = { version = "0.9.2", features=["wasm_js"]}
rand = { version ="0.9.2"}
# Create a shadow dependency on getrandom with the feature "js"
# In effect this will add the "js" feature flag to the real depedency
# kmeans_demo -> geo -> rand -> genrandom
getrandom = { version = "0.3", features = ["wasm_js"]}
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
# serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_log = { version = "0.2", features = ["color"] }
log = "0.4.29"
